Fixed bug #69845 (ArrayObject with ARRAY_AS_PROPS broken)